--- a/src/styles.css
+++ b/src/styles.css
@@ -764,12 +764,12 @@ button.quiet:hover:not(:disabled) {
 .reveal-overlay__shine {
   position: absolute;
   left: 50%;
-  top: 74%;
-  height: 220%;
+  top: 76%;
+  height: 185%;
   width: auto;
   aspect-ratio: 1 / 1;
-  max-width: 1200px;
-  max-height: 1200px;
+  max-width: 980px;
+  max-height: 980px;
   transform: translate(-50%, -50%) scale(0.72) translateZ(0);
   opacity: 0;
   pointer-events: none;
@@ -847,7 +847,7 @@ button.quiet:hover:not(:disabled) {
 
 .reveal-overlay__media--visible {
   opacity: 1;
-  transform: translate3d(0, 3%, 0);
+  transform: translate3d(0, calc(4% + var(--reveal-media-shift-y, 0px)), 0);
 }
 
 .reveal-overlay--closing .reveal-overlay__media {
@@ -870,20 +870,20 @@ button.quiet:hover:not(:disabled) {
 
 .reveal-overlay__media--visible .reveal-overlay__media-item--top {
   left: 50%;
-  top: 0%;
-  transform: translate(-50%, -42%);
+  top: 18%;
+  transform: translate(-50%, -50%);
 }
 
 .reveal-overlay__media--visible .reveal-overlay__media-item--left {
-  left: 0%;
-  top: 82%;
-  transform: translate(-20%, -64%);
+  left: 30%;
+  top: 70%;
+  transform: translate(-50%, -50%);
 }
 
 .reveal-overlay__media--visible .reveal-overlay__media-item--right {
-  left: 100%;
-  top: 82%;
-  transform: translate(-80%, -64%);
+  left: 70%;
+  top: 70%;
+  transform: translate(-50%, -50%);
 }
 
 .reveal-overlay__media-float {
