--- a/src/styles.css
+++ b/src/styles.css
@@ -1355,6 +1355,10 @@ button.inventory__open:focus-visible {
   flex-wrap: wrap;
 }
 
+.row--end {
+  justify-content: flex-end;
+}
+
 .toast {
   position: fixed;
   top: 24px;
